# kidplan-downloader

./: .commitlintrc.json  .gitignore  .versionrc.json  CHANGELOG.md  CONTRIBUTING.md  FACE_RECOGNITION_QUICKSTART.md  FACE_RECOGNITION_STATUS.md  LICENSE  README.md  analyze_embeddings.rs  biome.json  index.html  kidplan_bulk_download.py  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
.husky/: pre-commit
docs/: AUTOMATED_RELEASES.md  CONVENTIONAL_COMMITS.md
scripts/: cargo-version-updater.cjs  download-models.sh  github-release.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/models/: README.md
src-tauri/src/: database.rs  downloader.rs  face_recognition.rs  lib.rs  main.rs
src/components/: PageTransition.tsx  ProtectedRoute.tsx
src/context/: AppContext.tsx
src/i18n/: LanguageContext.tsx  translations.ts
src/pages/: Albums.tsx  Download.tsx  Faces.tsx  Login.tsx  Settings.tsx
src/styles/: globals.css
src/types/: index.ts
src/utils/: updater.ts
