[package]
name = "kidplan-downloader"
version = "0.1.0"
edition = "2021"

[lib]
name = "kidplan_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
scraper = "0.22"
urlencoding = "2"
url = "2"
html-escape = "0.2"
regex = "1"
dirs = "5"
tauri-plugin-store = "2.4.2"
tauri-plugin-os = "2.3.2"
tauri-plugin-updater = "2.10.0"
